--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.11
 
 # Mod Properties
-	mod_version = 7.0.0+1.19.3
+	mod_version = 3.0.0+1.19.3
 	maven_group = com.shnupbups
 	archives_base_name = extrapieces
 
@@ -16,8 +16,8 @@ org.gradle.jvmargs=-Xmx1G
 	# check on https://modmuss50.me/fabric.html
 	fabric_version=0.69.1+1.19.3
 
-	# check on bintray at https://bintray.com/natanfudge/libs/artifice
-	artifice_version=0.32.0+1.19.3
+#	# check on bintray at https://bintray.com/natanfudge/libs/artifice
+#	artifice_version=0.32.0+1.19.3
 
-	# check on cotton maven at http://server.bbkr.space:8081/artifactory/libs-release/io/github/cottonmc/Jankson-Fabric/
-	jankson_version=j1.2.1
+#	# check on cotton maven at http://server.bbkr.space:8081/artifactory/libs-release/io/github/cottonmc/Jankson-Fabric/
+#	jankson_version=j1.2.
