--- a/gradle.properties
+++ b/gradle.properties
@@ -3,21 +3,21 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.19.2
-	yarn_mappings=28
-	loader_version=0.14.11
+	minecraft_version=1.20.1
+	yarn_mappings=10
+	loader_version=0.15.11
 
 # Mod Properties
-	mod_version = 7.0.0+1.19.2
+	mod_version = 8.0.0+1.20.1
 	maven_group = com.shnupbups
 	archives_base_name = extrapieces
 
 # Dependencies
 	# check on https://modmuss50.me/fabric.html
-	fabric_version=0.68.0+1.19.2
+	fabric_version=0.92.2+1.20.1
 
 	# check on bintray at https://bintray.com/natanfudge/libs/artifice
-	artifice_version=0.19.0+1.19.2
+	artifice_version=0.21.1+build.1-1.20.1-EXPERIMENTAL
 
 	# check on cotton maven at http://server.bbkr.space:8081/artifactory/libs-release/io/github/cottonmc/Jankson-Fabric/
-	jankson_version=j1.2.1
+	jankson_version=1.2.1
