--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,11 @@ org.gradle.jvmargs=-Xmx1G
 
 	# check on cotton maven at http://server.bbkr.space:8081/artifactory/libs-release/io/github/cottonmc/Jankson-Fabric/
 	jankson_version=1.2.1
+
+# Publishing
+curseforge_publishing_enabled=true
+curseforge_project_id=1045002
+modrinth_publishing_enabled=true
+modrinth_project_id=oPuZ328m
+publishFabric=true
+dry_run=false
